Fix cas products, added yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,86 +1,6 @@
 before_script:
   - docker info
 
-build:
-  stage: build
+test:
   script:
-    - docker build -t prodex/web:test -f ./dockerfiles/Dockerfile.review .
-    - docker build -t prodex/web:jest -f ./dockerfiles/Dockerfile.test .
-    - docker create prodex/web:jest
-    - docker cp $(docker ps -alq):/usr/src/app/junit.xml .
-    - docker cp $(docker ps -alq):/usr/src/app/failedFlag . || exit 0
-    - if [ -f "failedFlag" ]; then exit 1; fi
-  artifacts:
-    when: always
-    paths:
-      - ./junit.xml
-    reports:
-      junit:
-        - ./junit.xml
-
-.login:
-  before_script:
-    - $(aws ecr get-login --no-include-email --region us-east-1 --profile echo)
-
-deploy_dev:
-  extends: .login
-  stage: deploy
-  resource_group: dev
-  script:
-    - docker build -t prodex/web:test -f ./dockerfiles/Dockerfile.dev .
-    - docker tag prodex/web:test 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web:dev
-    - docker push 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web:dev
-    - docker rmi 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web:dev
-  only:
-    variables:
-      - $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
-
-deploy_review:
-  extends: .login
-  stage: deploy
-  resource_group: review
-  when: manual
-  script:
-    - docker build -t prodex/web:test -f ./dockerfiles/Dockerfile.review .
-    - docker tag prodex/web:test 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web:review
-    - docker push 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web:review
-    - docker rmi 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web:review
-  only:
-    variables:
-      - $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
-
-deploy_staging:
-  extends: .login
-  stage: deploy
-  resource_group: staging
-  when: manual
-  script:
-    - docker build -t prodex/web:test -f ./dockerfiles/Dockerfile.review .
-    - docker tag prodex/web:test 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web:stage
-    - docker push 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web:stage
-    - docker rmi 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web:stage
-  only:
-    variables:
-      - $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
-
-deploy_production:
-  extends: .login
-  stage: deploy
-  resource_group: production
-  when: manual
-  script:
-    - docker build -t prodex/web:prod -f ./dockerfiles/Dockerfile.prod .
-    - docker tag prodex/web:prod 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web:production
-    - docker push 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web:production
-    - docker rmi 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web:production
-  only:
-    variables:
-      - $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
-
-cleanup:
-  stage: .post
-  when: always
-  script:
-    - docker rmi $(docker images -q prodex/web:jest) || exit 0
-    - docker rmi $(docker images -q prodex/web:test) || exit 0
-    - docker system prune --volumes -f || exit 0
+    - docker run -it -v $PWD:/e2e -w /e2e cypress/included:3.2.0
