--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cookie": "^0.3.1",
     "cookie-parser": "^1.4.4",
     "debounce": "^1.2.0",
+    "deep-keys": "^0.5.0",
     "deepmerge": "^3.2.0",
     "dotenv": "^6.2.0",
     "dotenv-webpack": "^1.7.0",
