--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-dropzone": "^5.1.1",
     "react-feather": "^2.0.3",
     "react-gtm-module": "^2.0.7",
+    "react-html-parser": "^2.0.2",
     "react-input-mask": "^2.0.4",
     "react-intl": "^2.8.0",
     "react-json-pretty": "^2.1.0",
