--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-ui/icons": "^3.0.2",
     "@zeit/next-css": "^0.2.1-canary.4",
     "@zeit/next-sass": "^0.2.1-canary.4",
+    "animated-number-react": "^0.1.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "bootstrap-without-jquery": "^1.0.5",
