--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "react-feather": "^2.0.3",
     "react-gtm-module": "^2.0.7",
     "react-html-parser": "^2.0.2",
-    "react-input-mask": "^2.0.4",
+    "react-input-mask": "^3.0.0-alpha.2",
     "react-intl": "^2.8.0",
     "react-json-pretty": "^2.1.0",
     "react-motion": "^0.5.2",
