--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.8.6",
     "react-autosize-textarea": "^7.0.0",
+    "react-calendar": "^3.1.0",
     "react-confirm": "^0.1.18",
     "react-countup": "^3.0.2",
     "react-datepicker": "^2.7.0",
