--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-motion": "^0.5.2",
     "react-number-format": "^4.0.6",
     "react-perfect-scrollbar": "^1.4.2",
+    "react-plaid-link": "^3.0.0",
     "react-redux": "^5.1.1",
     "react-redux-form": "^1.16.10",
     "react-router": "^4.3.1",
