--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "yup": "^0.27.0"
   },
   "scripts": {
-    "dev": "node server.js",
+    "dev": "node --max_old_space_size=4096 server.js",
     "build": "next build",
     "start-s": "next start",
     "start": "NODE_ENV=production node server.js",
