--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "md5": "^2.2.1",
     "moment": "^2.22.2",
     "moment-duration-format": "^2.3.2",
-    "next": "^v8.1.0",
+    "next": "^10.0.2",
     "next-cookies": "^1.1.2",
     "next-redux-wrapper": "^2.0.0",
     "next-routes": "^1.4.2",
@@ -52,13 +52,13 @@
     "nprogress": "^0.2.0",
     "perfect-scrollbar": "^1.4.0",
     "prop-types": "^15.6.2",
-    "react": "^16.8.6",
+    "react": "^17.0.1",
     "react-autosize-textarea": "^7.0.0",
     "react-calendar": "^3.1.0",
     "react-confirm": "^0.1.18",
     "react-countup": "^3.0.2",
     "react-datepicker": "^2.7.0",
-    "react-dom": "^16.8.6",
+    "react-dom": "^17.0.1",
     "react-dropzone": "^5.1.1",
     "react-feather": "^2.0.3",
     "react-gtm-module": "^2.0.7",
