--- a/.eslintrc
+++ b/.eslintrc
@@ -13,13 +13,15 @@
     },
     "sourceType": "module"
   },
-  "plugins": ["react"],
+  "plugins": ["react", "react-hooks"],
   "rules": {
     "semi": ["error", "never"],
     "no-undef": 0,
     "no-unused-vars": 0,
     "no-console": 0,
     "react/jsx-uses-vars": [2],
-    "comma-dangle": ["error", "never"]
+    "comma-dangle": ["error", "never"],
+    "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
+    "react-hooks/exhaustive-deps": "warn" // Checks effect dependencies
   }
 }
