--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@devexpress/dx-react-core": "^1.11.0",
     "@devexpress/dx-react-grid": "^1.11.0",
     "@devexpress/dx-react-grid-bootstrap4": "^1.11.0",
+    "@material-ui/core": "^3.0.0",
     "@material-ui/icons": "^3.0.2",
     "@zeit/next-css": "^0.2.1-canary.4",
     "@zeit/next-sass": "^0.2.1-canary.4",
@@ -28,18 +29,18 @@
     "md5": "^2.2.1",
     "moment": "^2.22.2",
     "moment-duration-format": "^2.3.2",
-    "next": "^v8.1.0",
+    "next": "^10.0.3",
     "next-cookies": "^1.1.2",
     "next-redux-wrapper": "^2.0.0",
     "next-routes": "^1.4.2",
     "node-sass-chokidar": "^1.3.4",
     "nprogress": "^0.2.0",
     "prop-types": "^15.6.2",
-    "react": "^16.8.6",
+    "react": "^17.0.1",
     "react-autosize-textarea": "^7.0.0",
     "react-calendar": "^3.1.0",
     "react-confirm": "^0.1.18",
-    "react-dom": "^16.8.6",
+    "react-dom": "^17.0.1",
     "react-dropzone": "^5.1.1",
     "react-feather": "^2.0.3",
     "react-gtm-module": "^2.0.7",
