--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "cookie-parser": "^1.4.4",
+    "css-loader": "^5.0.1",
     "dotenv": "^6.2.0",
     "dotenv-webpack": "^1.7.0",
     "ein-validator": "^1.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
     "express": "^4.16.4",
+    "fibers": "^3.1.0",
     "file-loader": "^3.0.1",
     "formik": "^1.5.8",
     "formik-semantic-ui-fixed-validation": "^0.10.2",
@@ -35,12 +39,13 @@
     "next-routes": "^1.4.2",
     "node-sass-chokidar": "^1.3.4",
     "nprogress": "^0.2.0",
+    "postcss": "^8.1.0",
     "prop-types": "^15.6.2",
-    "react": "^17.0.1",
+    "react": "^16.14.0",
     "react-autosize-textarea": "^7.0.0",
     "react-calendar": "^3.1.0",
     "react-confirm": "^0.1.18",
-    "react-dom": "^17.0.1",
+    "react-dom": "^16.14.0",
     "react-dropzone": "^5.1.1",
     "react-feather": "^2.0.3",
     "react-gtm-module": "^2.0.7",
@@ -61,9 +66,10 @@
     "redux-saga": "^1.0.2",
     "redux-thunk": "^2.3.0",
     "request": "^2.88.0",
+    "sass": "^1.3.0",
     "sass-loader": "^7.1.0",
     "semantic-ui-calendar-react": "^0.14.4",
-    "semantic-ui-react": "^0.88.0",
+    "semantic-ui-react": "^0.87.0",
     "styled-components": "^4.3.2",
     "styled-jsx": "^3.2.1",
     "tree-model": "^1.0.7",
