--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "@babel/core": "^7.3.4",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@devexpress/dx-grid-core": "1.11.0",
+    "@devexpress/dx-core": "^1.11.2",
+    "@devexpress/dx-grid-core": "^1.11.2",
     "@devexpress/dx-react-core": "^1.11.0",
     "@devexpress/dx-react-grid": "^1.11.0",
     "@devexpress/dx-react-grid-bootstrap4": "^1.11.0",
@@ -97,7 +98,6 @@
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-react": "^7.12.4",
     "gulp": "^3.0.0",
-    "react-intl": "^2.8.0",
     "semantic-ui": "^2.4.2"
   },
   "browserslist": [
