--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "dependencies": {
     "@babel/core": "^7.3.4",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@devexpress/dx-core": "^1.11.2",
-    "@devexpress/dx-grid-core": "^1.11.2",
+    "@devexpress/dx-core": "^1.11.0",
+    "@devexpress/dx-grid-core": "^1.11.0",
     "@devexpress/dx-react-core": "^1.11.0",
     "@devexpress/dx-react-grid": "^1.11.0",
     "@devexpress/dx-react-grid-bootstrap4": "^1.11.0",
@@ -93,13 +93,19 @@
     "semantic": "cd semantic && gulp watch"
   },
   "devDependencies": {
+    "@types/node": "^14.14.14",
+    "@types/react": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.10.0",
+    "@typescript-eslint/parser": "^4.10.0",
     "babel-eslint": "^10.0.1",
     "babel-plugin-styled-components": "^1.10.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "gulp": "^3.0.0",
-    "semantic-ui": "^2.4.2"
+    "semantic-ui": "^2.4.2",
+    "typescript": "^4.1.3"
   },
   "browserslist": [
     ">0.2%",
