--- a/cypress/Dockerfile
+++ b/cypress/Dockerfile
@@ -22,10 +22,9 @@ RUN useradd -r --no-log-init -u ${USER_ID} -g appuser appuser
 RUN install -d -m 0755 -o appuser -g appuser /home/appuser
 
 # move test runner binary folder to the non-root's user home directory
-RUN mv /root/.cache /home/appuser/.cache
+RUN cp -R /root/.cache /home/appuser/.cache
 
 USER appuser
 # show user effective id and group - it should be non-zero
 # meaning the current user is not root
 RUN id
-RUN cypress install
