--- a/cypress/Dockerfile
+++ b/cypress/Dockerfile
@@ -16,6 +16,7 @@ ARG GROUP_ID=999
 # if you want to see all existing groups uncomment the next command
 # RUN cat /etc/group
 RUN chmod -R 777 /root/.cache
+RUN cypress install
 RUN groupadd -g ${GROUP_ID} appuser
 # do not log creating new user, otherwise there could be a lot of messages
 RUN useradd -r --no-log-init -u ${USER_ID} -g appuser appuser
@@ -28,3 +29,4 @@ USER appuser
 # show user effective id and group - it should be non-zero
 # meaning the current user is not root
 RUN id
+RUN cypress install
