--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@devexpress/dx-react-grid-bootstrap4": "^1.11.0",
     "@material-ui/core": "^3.0.0",
     "@material-ui/icons": "^3.0.2",
+    "@types/react-redux": "^7.1.15",
     "@zeit/next-css": "^0.2.1-canary.4",
     "@zeit/next-sass": "^0.2.1-canary.4",
     "axios": "^0.18.0",
@@ -93,8 +94,11 @@
     "semantic": "cd semantic && gulp watch"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.165",
     "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
+    "@types/react-intl": "^3.0.0",
+    "@types/styled-components": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.10.0",
     "@typescript-eslint/parser": "^4.10.0",
     "babel-eslint": "^10.0.1",
