--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,7 @@
     },
     "sourceType": "module"
   },
-  "plugins": [ "react", "react-hooks"],
+  "plugins": [ "react", "react-hooks", "typescript"],
   "rules": {
     "semi": ["error", "never"],
     "no-undef": 0,
@@ -22,9 +22,13 @@
     "react/jsx-uses-vars": [2],
     "comma-dangle": ["error", "never"],
     "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
-    "react-hooks/exhaustive-deps": "warn" // Checks effect dependencies
+    "react-hooks/exhaustive-deps": "warn", // Checks effect dependencies
+    "@typescipt-eslint/interface-name-prefix": ["always"],
+    "no-underscore-dangle": "error"
   },
   "extends": [
-    "plugin:react-hooks/recommended"
+    "plugin:react-hooks/recommended",
+    "prettier/@typescript-eslint",
+    "plugin:prettier/recommended"
   ]
 }
