--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "@types/react-redux": "^7.1.15",
     "@zeit/next-css": "^0.2.1-canary.4",
     "@zeit/next-sass": "^0.2.1-canary.4",
+    "typescript": "^4.1.3",
+    "@types/node": "^14.14.20",
+    "@types/lodash": "^4.14.165",
+    "@types/react": "^17.0.0",
+    "@types/styled-components": "^5.1.7",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "cookie-parser": "^1.4.4",
@@ -94,11 +99,7 @@
     "semantic": "cd semantic && gulp watch"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.165",
-    "@types/node": "^14.14.14",
-    "@types/react": "^17.0.0",
     "@types/react-intl": "^3.0.0",
-    "@types/styled-components": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.10.0",
     "@typescript-eslint/parser": "^4.10.0",
     "babel-eslint": "^10.0.1",
@@ -108,8 +109,7 @@
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-react-hooks": "^4.2.0",
     "gulp": "^3.0.0",
-    "semantic-ui": "^2.4.2",
-    "typescript": "^4.1.3"
+    "semantic-ui": "^2.4.2"
   },
   "browserslist": [
     ">0.2%",
