--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,7 @@
     },
     "sourceType": "module"
   },
-  "plugins": [ "react", "react-hooks", "typescript"],
+  "plugins": [ "react", "react-hooks"],
   "rules": {
     "semi": ["error", "never"],
     "no-undef": 0,
@@ -23,12 +23,9 @@
     "comma-dangle": ["error", "never"],
     "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
     "react-hooks/exhaustive-deps": "warn", // Checks effect dependencies
-    "@typescipt-eslint/interface-name-prefix": ["always"],
     "no-underscore-dangle": "error"
   },
   "extends": [
-    "plugin:react-hooks/recommended",
-    "prettier/@typescript-eslint",
-    "plugin:prettier/recommended"
+    "plugin:react-hooks/recommended"
   ]
 }
