--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "@material-ui/icons": "^3.0.2",
     "@zeit/next-css": "^0.2.1-canary.4",
     "@zeit/next-sass": "^0.2.1-canary.4",
-    "axios": "^0.18.0",
+    "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "cookie-parser": "^1.4.4",
     "css-loader": "^5.0.1",
+    "date-fns": "^2.16.1",
     "dotenv": "^6.2.0",
     "dotenv-webpack": "^1.7.0",
     "ein-validator": "^1.0.0",
@@ -30,7 +31,7 @@
     "formik-semantic-ui-fixed-validation": "^0.10.2",
     "http-proxy-middleware": "^0.19.1",
     "js-cookie": "^2.2.0",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.20",
     "md5": "^2.2.1",
     "moment": "^2.22.2",
     "moment-duration-format": "^2.3.2",
@@ -46,6 +47,7 @@
     "react-autosize-textarea": "^7.0.0",
     "react-calendar": "^3.1.0",
     "react-confirm": "^0.1.18",
+    "react-datepicker": "^3.4.1",
     "react-dom": "^16.14.0",
     "react-dropzone": "^5.1.1",
     "react-feather": "^2.0.3",
@@ -55,6 +57,7 @@
     "react-intl": "^2.8.0",
     "react-perfect-scrollbar": "^1.4.2",
     "react-plaid-link": "^3.0.0",
+    "react-popper": "^2.2.4",
     "react-redux": "^5.1.1",
     "react-redux-form": "^1.16.10",
     "react-textarea-autosize": "^7.1.2",
