--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "@devexpress/dx-react-core": "^1.11.0",
     "@devexpress/dx-react-grid": "^1.11.0",
     "@devexpress/dx-react-grid-bootstrap4": "^1.11.0",
-    "@material-ui/core": "^3.0.0",
+    "@material-ui/core": "^3.9.4",
     "@material-ui/icons": "^3.0.2",
     "@zeit/next-css": "^0.2.1-canary.4",
     "@zeit/next-sass": "^0.2.1-canary.4",
-    "axios": "^0.18.0",
+    "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "cookie-parser": "^1.4.4",
     "css-loader": "^5.0.1",
+    "date-fns": "^2.16.1",
     "dotenv": "^6.2.0",
     "dotenv-webpack": "^1.7.0",
     "ein-validator": "^1.0.0",
@@ -30,7 +31,7 @@
     "formik-semantic-ui-fixed-validation": "^0.10.2",
     "http-proxy-middleware": "^0.19.1",
     "js-cookie": "^2.2.0",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.20",
     "md5": "^2.2.1",
     "moment": "^2.22.2",
     "moment-duration-format": "^2.3.2",
@@ -42,23 +43,25 @@
     "nprogress": "^0.2.0",
     "postcss": "^8.1.0",
     "prop-types": "^15.6.2",
-    "react": "^16.14.0",
-    "react-autosize-textarea": "^7.0.0",
+    "react": "^17.0.1",
+    "react-autosize-textarea": "^7.1.0",
     "react-calendar": "^3.1.0",
-    "react-confirm": "^0.1.18",
+    "react-confirm": "^0.1.20",
+    "react-datepicker": "^3.4.1",
     "react-dom": "^16.14.0",
     "react-dropzone": "^5.1.1",
-    "react-feather": "^2.0.3",
-    "react-gtm-module": "^2.0.7",
+    "react-feather": "^2.0.9",
+    "react-gtm-module": "^2.0.11",
     "react-html-parser": "^2.0.2",
     "react-input-mask": "^3.0.0-alpha.2",
-    "react-intl": "^2.8.0",
+    "react-intl": "^2.9.0",
     "react-perfect-scrollbar": "^1.4.2",
-    "react-plaid-link": "^3.0.0",
-    "react-redux": "^5.1.1",
-    "react-redux-form": "^1.16.10",
+    "react-plaid-link": "^3.1.0",
+    "react-popper": "^2.2.4",
+    "react-redux": "^5.1.2",
+    "react-redux-form": "^1.16.14",
     "react-textarea-autosize": "^7.1.2",
-    "react-toast-notifications": "^1.4.0",
+    "react-toast-notifications": "^1.5.0",
     "recharts": "^1.8.5",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
@@ -73,7 +76,7 @@
     "semantic-ui-react": "^0.86.0",
     "shortid": "^2.2.14",
     "styled-components": "^4.3.2",
-    "styled-jsx": "^3.2.1",
+    "styled-jsx": "^3.4.1",
     "tree-model": "^1.0.7",
     "type-to-reducer": "^1.1.0",
     "universal-cookie": "^4.0.3",
