--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "redux-saga": "^1.0.2",
     "redux-thunk": "^2.3.0",
     "request": "^2.88.0",
+    "reselect": "^4.0.0",
     "sass": "^1.3.0",
     "sass-loader": "^7.1.0",
     "semantic-ui-calendar-react": "^0.14.4",
