--- a/package.json
+++ b/package.json
@@ -3,90 +3,90 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/core": "^7.3.4",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@devexpress/dx-core": "^1.11.0",
-    "@devexpress/dx-grid-core": "^1.11.0",
-    "@devexpress/dx-react-core": "^1.11.0",
-    "@devexpress/dx-react-grid": "^1.11.0",
-    "@devexpress/dx-react-grid-bootstrap4": "^1.11.0",
-    "@material-ui/core": "^3.9.4",
-    "@material-ui/icons": "^3.0.2",
-    "@zeit/next-css": "^0.2.1-canary.4",
-    "@zeit/next-sass": "^0.2.1-canary.4",
-    "axios": "^0.21.1",
-    "better-docs": "^2.3.2",
-    "classnames": "^2.2.6",
-    "cookie-parser": "^1.4.4",
-    "css-loader": "^5.0.1",
-    "date-fns": "^2.16.1",
-    "dotenv": "^6.2.0",
-    "dotenv-webpack": "^1.7.0",
-    "ein-validator": "^1.0.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "express": "^4.16.4",
-    "fibers": "^3.1.0",
-    "file-loader": "^3.0.1",
-    "formik": "^1.5.8",
-    "formik-semantic-ui-fixed-validation": "^0.10.2",
-    "http-proxy-middleware": "^0.19.1",
-    "js-cookie": "^2.2.0",
-    "jsdoc": "^3.6.6",
-    "lodash": "^4.17.20",
-    "md5": "^2.2.1",
-    "moment": "^2.22.2",
-    "moment-duration-format": "^2.3.2",
-    "next": "^10.0.3",
-    "next-cookies": "^1.1.2",
-    "next-redux-wrapper": "^2.0.0",
-    "next-routes": "^1.4.2",
-    "node-sass-chokidar": "^1.3.4",
-    "nprogress": "^0.2.0",
-    "postcss": "^8.1.0",
-    "prop-types": "^15.6.2",
-    "react": "^17.0.1",
-    "react-autosize-textarea": "^7.1.0",
-    "react-calendar": "^3.1.0",
-    "react-confirm": "^0.1.20",
-    "react-datepicker": "^3.4.1",
-    "react-dom": "^17.0.1",
-    "react-dropzone": "^5.1.1",
-    "react-feather": "^2.0.9",
-    "react-gtm-module": "^2.0.11",
-    "react-html-parser": "^2.0.2",
-    "react-input-mask": "^3.0.0-alpha.2",
-    "react-intl": "^5.12.0",
-    "react-perfect-scrollbar": "^1.4.2",
-    "react-plaid-link": "^3.1.0",
-    "react-popper": "^2.2.4",
-    "react-redux": "^5.1.2",
-    "react-redux-form": "^1.16.14",
-    "react-textarea-autosize": "^7.1.2",
-    "react-toast-notifications": "^2.4.0",
-    "recharts": "^1.8.5",
-    "redux": "^3.7.2",
-    "redux-logger": "^3.0.6",
-    "redux-promise-middleware": "^5.0.0",
-    "redux-promise-middleware-actions": "^2.1.0",
-    "redux-saga": "^1.0.2",
-    "redux-thunk": "^2.3.0",
-    "request": "^2.88.0",
-    "reselect": "^4.0.0",
-    "sass": "^1.3.0",
-    "sass-loader": "^7.1.0",
-    "semantic-ui-calendar-react": "^0.14.4",
-    "semantic-ui-react": "^0.86.0",
-    "shortid": "^2.2.14",
-    "styled-components": "^5.2.0",
-    "styled-jsx": "^3.4.1",
-    "tree-model": "^1.0.7",
-    "type-to-reducer": "^1.1.0",
-    "universal-cookie": "^4.0.3",
-    "url-loader": "^1.1.2",
-    "webpack": "^4.29.6",
-    "xlsx": "^0.12.13",
-    "yup": "^0.27.0"
+    "@babel/core": "7.3.4",
+    "@babel/plugin-syntax-dynamic-import": "7.2.0",
+    "@devexpress/dx-core": "1.11.0",
+    "@devexpress/dx-grid-core": "1.11.0",
+    "@devexpress/dx-react-core": "1.11.0",
+    "@devexpress/dx-react-grid": "1.11.0",
+    "@devexpress/dx-react-grid-bootstrap4": "1.11.0",
+    "@material-ui/core": "3.9.4",
+    "@material-ui/icons": "3.0.2",
+    "@zeit/next-css": "0.2.1-canary.4",
+    "@zeit/next-sass": "0.2.1-canary.4",
+    "axios": "0.21.1",
+    "better-docs": "2.3.2",
+    "classnames": "2.2.6",
+    "cookie-parser": "1.4.4",
+    "css-loader": "5.0.1",
+    "date-fns": "2.16.1",
+    "dotenv": "6.2.0",
+    "dotenv-webpack": "1.7.0",
+    "ein-validator": "1.0.0",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jsx-a11y": "6.1.1",
+    "express": "4.16.4",
+    "fibers": "3.1.0",
+    "file-loader": "3.0.1",
+    "formik": "1.5.8",
+    "formik-semantic-ui-fixed-validation": "0.10.2",
+    "http-proxy-middleware": "0.19.1",
+    "js-cookie": "2.2.0",
+    "jsdoc": "3.6.6",
+    "lodash": "4.17.20",
+    "md5": "2.2.1",
+    "moment": "2.22.2",
+    "moment-duration-format": "2.3.2",
+    "next": "10.0.3",
+    "next-cookies": "1.1.2",
+    "next-redux-wrapper": "2.0.0",
+    "next-routes": "1.4.2",
+    "node-sass-chokidar": "1.3.4",
+    "nprogress": "0.2.0",
+    "postcss": "8.1.0",
+    "prop-types": "15.6.2",
+    "react": "17.0.1",
+    "react-autosize-textarea": "7.1.0",
+    "react-calendar": "3.1.0",
+    "react-confirm": "0.1.20",
+    "react-datepicker": "3.4.1",
+    "react-dom": "17.0.1",
+    "react-dropzone": "5.1.1",
+    "react-feather": "2.0.9",
+    "react-gtm-module": "2.0.11",
+    "react-html-parser": "2.0.2",
+    "react-input-mask": "3.0.0-alpha.2",
+    "react-intl": "5.12.0",
+    "react-perfect-scrollbar": "1.4.2",
+    "react-plaid-link": "3.1.0",
+    "react-popper": "2.2.4",
+    "react-redux": "5.1.2",
+    "react-redux-form": "1.16.14",
+    "react-textarea-autosize": "7.1.2",
+    "react-toast-notifications": "2.4.0",
+    "recharts": "1.8.5",
+    "redux": "3.7.2",
+    "redux-logger": "3.0.6",
+    "redux-promise-middleware": "5.0.0",
+    "redux-promise-middleware-actions": "2.1.0",
+    "redux-saga": "1.0.2",
+    "redux-thunk": "2.3.0",
+    "request": "2.88.0",
+    "reselect": "4.0.0",
+    "sass": "1.3.0",
+    "sass-loader": "7.1.0",
+    "semantic-ui-calendar-react": "0.14.4",
+    "semantic-ui-react": "0.86.0",
+    "shortid": "2.2.14",
+    "styled-components": "5.2.0",
+    "styled-jsx": "3.4.1",
+    "tree-model": "1.0.7",
+    "type-to-reducer": "1.1.0",
+    "universal-cookie": "4.0.3",
+    "url-loader": "1.1.2",
+    "webpack": "4.29.6",
+    "xlsx": "0.12.13",
+    "yup": "0.27.0"
   },
   "scripts": {
     "dev": "node --max-old-space-size=8192 server.js",
@@ -98,14 +98,14 @@
     "docs": "jsdoc -c ./jsdoc.json"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
-    "babel-plugin-styled-components": "^1.10.0",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-react": "^7.12.4",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "gulp": "^3.0.0",
-    "semantic-ui": "^2.4.2"
+    "babel-eslint": "10.0.1",
+    "babel-plugin-styled-components": "1.10.0",
+    "eslint": "5.16.0",
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-plugin-react": "7.12.4",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "gulp": "3.0.0",
+    "semantic-ui": "2.4.2"
   },
   "browserslist": [
     ">0.2%",
