--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "md5": "^2.2.1",
     "moment": "^2.22.2",
     "moment-duration-format": "^2.3.2",
-    "next": "^10.0.3",
+    "next": "^10.1.0",
     "next-cookies": "^1.1.2",
     "next-redux-wrapper": "^2.0.0",
     "next-routes": "^1.4.2",
@@ -78,7 +78,7 @@
     "semantic-ui-calendar-react": "^0.14.4",
     "semantic-ui-react": "^0.86.0",
     "shortid": "^2.2.14",
-    "styled-components": "^5.2.0",
+    "styled-components": "5.2.1",
     "styled-jsx": "^3.4.1",
     "tree-model": "^1.0.7",
     "type-to-reducer": "^1.1.0",
