--- a/package.json
+++ b/package.json
@@ -95,9 +95,11 @@
     "start": "NODE_ENV=production node --max-old-space-size=8192 server.js",
     "semantic:build": "cd semantic && gulp build",
     "semantic": "cd semantic && gulp watch",
-    "docs": "jsdoc -c ./jsdoc.json"
+    "docs": "jsdoc -c ./jsdoc.json",
+    "test": "jest --watchAll"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.23",
     "babel-eslint": "^10.0.1",
     "babel-plugin-styled-components": "^1.10.0",
     "eslint": "^5.16.0",
@@ -105,6 +107,7 @@
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-react-hooks": "^4.2.0",
     "gulp": "^3.0.0",
+    "jest": "^26.6.3",
     "semantic-ui": "^2.4.2"
   },
   "browserslist": [
