--- a/package.json
+++ b/package.json
@@ -96,12 +96,14 @@
     "semantic:build": "cd semantic && gulp build",
     "semantic": "cd semantic && gulp watch",
     "docs": "jsdoc -c ./jsdoc.json",
-    "test": "jest --watchAll"
+    "test": "jest --watch"
   },
   "devDependencies": {
     "@types/jest": "^26.0.23",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
     "babel-eslint": "^10.0.1",
     "babel-plugin-styled-components": "^1.10.0",
+    "enzyme": "^3.11.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-react": "^7.12.4",
