--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,13 @@
       "styled-jsx/babel": {}
     }]
   ],
+  "env": {
+    "production": {
+      "plugins": [
+        ["react-remove-properties", {"properties": ["data-test"]}]
+      ]
+    }
+  },
   "plugins": [
     [
       "styled-components",
