--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "babel-eslint": "^10.0.1",
     "babel-plugin-react-remove-properties": "^0.3.0",
     "babel-plugin-styled-components": "^1.10.0",
+    "check-prop-types": "^1.1.2",
     "enzyme": "^3.11.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
