--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,18 +4,18 @@ before_script:
 build:
   stage: build
   script:
-    - docker build -t prodex/web:test .
+    - docker build -t prodex/web:test -f ./dockerfiles/Dockerfile.review .
 
-.login_and_build:
+.login:
   before_script:
     - $(aws ecr get-login --no-include-email --region us-east-1 --profile echo)
-    - docker build -t prodex/web:test .
 
 deploy_dev:
-  extends: .login_and_build
+  extends: .login
   stage: deploy
   resource_group: dev
   script:
+    - docker build -t prodex/web:test -f ./dockerfiles/Dockerfile.review .
     - docker tag prodex/web:test 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web:dev
     - docker push 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web
     - docker rmi 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web:dev
@@ -24,11 +24,12 @@ deploy_dev:
       - $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
 
 deploy_review:
-  extends: .login_and_build
+  extends: .login
   stage: deploy
   resource_group: review
   when: manual
   script:
+    - docker build -t prodex/web:test -f ./dockerfiles/Dockerfile.review .
     - docker tag prodex/web:test 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web:review
     - docker push 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web
     - docker rmi 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web:review
@@ -37,11 +38,12 @@ deploy_review:
       - $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
 
 deploy_staging:
-  extends: .login_and_build
+  extends: .login
   stage: deploy
   resource_group: staging
   when: manual
   script:
+    - docker build -t prodex/web:test -f ./dockerfiles/Dockerfile.review .
     - docker tag prodex/web:test 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web:stage
     - docker push 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web
     - docker rmi 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web:stage
@@ -50,11 +52,12 @@ deploy_staging:
       - $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
 
 deploy_production:
-  extends: .login_and_build
+  extends: .login
   stage: deploy
   resource_group: production
   when: manual
   script:
+    - docker build -t prodex/web:prod -f ./dockerfiles/Dockerfile.prod .
     - docker tag prodex/web:test 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web:production
     - docker push 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web
     - docker rmi 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web:production
