--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "gulp": "^3.0.0",
     "jest": "^26.6.3",
+    "moxios": "^0.4.0",
     "semantic-ui": "^2.4.2"
   },
   "browserslist": [
