--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
   "scripts": {
     "dev": "node --max-old-space-size=8192 server.js",
     "build": "next build",
+    "build:review": "APP_ENV=review next build",
     "next:start": "next start",
     "start": "NODE_ENV=production node --max-old-space-size=8192 server.js",
     "semantic:build": "cd semantic && gulp build",
