--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,10 +1,11 @@
 {
     "compilerOptions": {
         "jsx": "react-jsx",
-        "checkJs": true
+        "checkJs": true,
     },
     "exclude": [
         "node_modules",
-        "**/node_modules/*"
+        "**/node_modules/*",
+        "dist"
     ]
 }
