--- a/.babelrc
+++ b/.babelrc
@@ -12,6 +12,20 @@
         "displayName": true,
         "preprocess": false
       }
+    ],
+    ["babel-plugin-import", {
+        "libraryName": "@material-ui/core",
+        "libraryDirectory": "",
+        "camel2DashComponentName": false
+      },
+      "core"
+    ],
+    ["babel-plugin-import", {
+        "libraryName": "@material-ui/icons",
+        "libraryDirectory": "",
+        "camel2DashComponentName": false
+      },
+      "icons"
     ]
   ]
 }
