--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@zeit/next-css": "^0.2.1-canary.4",
     "@zeit/next-sass": "^0.2.1-canary.4",
     "axios": "^0.21.1",
+    "babel-plugin-import": "^1.13.3",
     "better-docs": "^2.3.2",
     "classnames": "^2.2.6",
     "cookie-parser": "^1.4.4",
