--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 before_script:
   - docker -D info
   - docker system prune -f
-  - docker system prune --volumes
+  - docker system prune --volumes -f
   - docker rmi --force $(docker images -q --no-trunc)
   - cd cypress/
   - set e+x
