--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
       "^~/(.*)$": "<rootDir>/$1",
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/assetsTransformer.js",
       "\\.(css|less)$": "<rootDir>/assetsTransformer.js"
-    }
+    },
+    "resetMocks": false
   }
 }
