Ignore cleanup fail

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ before_script:
   - docker -D info
   - docker system prune -f
   - docker system prune --volumes -f
-  - docker rmi --force $(docker images -q --no-trunc)
+  - docker rmi --force $(docker images -q --no-trunc) || true
   - cd cypress/
   - set e+x
   - docker build -t cypress/artio .
