--- a/.eslintrc
+++ b/.eslintrc
@@ -22,9 +22,11 @@
     "comma-dangle": ["error", "never"],
     "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
     "react-hooks/exhaustive-deps": "warn", // Checks effect dependencies
-    "no-underscore-dangle": "error"
+    "no-underscore-dangle": "error",
+    "cypress/no-unnecessary-waiting": 0
   },
   "extends": [
-    "plugin:react-hooks/recommended"
+    "plugin:react-hooks/recommended",
+    "plugin:cypress/recommended"
   ]
 }
