--- a/package.json
+++ b/package.json
@@ -92,6 +92,8 @@
     "yup": "^0.27.0"
   },
   "scripts": {
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
     "dev": "node --max-old-space-size=8192 server.js",
     "build": "next build",
     "build:review": "BABEL_ENV=review APP_ENV=local next build",
@@ -110,6 +112,8 @@
     "babel-plugin-styled-components": "^1.10.0",
     "check-prop-types": "^1.1.2",
     "enzyme": "^3.11.0",
+    "cypress": "6.4.0",
+    "cypress-file-upload": "^3.3.4",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-react": "^7.12.4",
