--- a/package.json
+++ b/package.json
@@ -96,7 +96,8 @@
     "semantic:build": "cd semantic && gulp build",
     "semantic": "cd semantic && gulp watch",
     "docs": "jsdoc -c ./jsdoc.json",
-    "test": "jest --watch"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "devDependencies": {
     "@types/jest": "^26.0.23",
