--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@material-ui/core": "^3.9.4",
     "@material-ui/icons": "^3.0.2",
     "@next/bundle-analyzer": "^10.2.0",
-    "@zeit/next-css": "^0.2.1-canary.4",
-    "@zeit/next-sass": "^0.2.1-canary.4",
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
     "axios": "^0.21.1",
     "babel-plugin-import": "^1.13.3",
     "babel-plugin-react-remove-properties": "^0.3.0",
@@ -40,7 +40,7 @@
     "md5": "^2.2.1",
     "moment": "^2.22.2",
     "moment-duration-format": "^2.3.2",
-    "next": "^10.1.0",
+    "next": "^10.2.0",
     "next-cookies": "^1.1.2",
     "next-redux-wrapper": "^2.0.0",
     "next-routes": "^1.4.2",
