--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "cypress-file-upload": "^3.3.4",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-cypress": "^2.11.3",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-react-hooks": "^4.2.0",
     "fetch-mock": "^9.11.0",
