--- a/package.json
+++ b/package.json
@@ -101,7 +101,9 @@
     "semantic": "cd semantic && gulp watch",
     "docs": "jsdoc -c ./jsdoc.json",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "cypress:test": "npx cypress run --headed -b chrome --reporter junit",
+    "cypress:open": "cypress open"
   },
   "devDependencies": {
     "@types/jest": "^26.0.23",
@@ -110,6 +112,8 @@
     "babel-plugin-styled-components": "^1.10.0",
     "check-prop-types": "^1.1.2",
     "enzyme": "^3.11.0",
+    "cypress": "^8.3.1",
+    "cypress-file-upload": "^5.0.8",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-react": "^7.12.4",
@@ -118,6 +122,8 @@
     "gulp": "^3.0.0",
     "jest": "^26.6.3",
     "jest-junit": "^12.2.0",
+    "mocha": "^9.0.3",
+    "mocha-junit-reporter": "^2.0.0",
     "moxios": "^0.4.0",
     "redux-mock-store": "^1.5.4",
     "semantic-ui": "^2.4.2",
