--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ deploy_dev:
   script:
     - docker build -t prodex/web:test -f ./dockerfiles/Dockerfile.review .
     - docker tag prodex/web:test 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web:dev
-    - docker push 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web
+    - docker push 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web:dev
     - docker rmi 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web:dev
   only:
     variables:
@@ -31,7 +31,7 @@ deploy_review:
   script:
     - docker build -t prodex/web:test -f ./dockerfiles/Dockerfile.review .
     - docker tag prodex/web:test 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web:review
-    - docker push 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web
+    - docker push 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web:review
     - docker rmi 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web:review
   only:
     variables:
@@ -45,7 +45,7 @@ deploy_staging:
   script:
     - docker build -t prodex/web:test -f ./dockerfiles/Dockerfile.review .
     - docker tag prodex/web:test 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web:stage
-    - docker push 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web
+    - docker push 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web:stage
     - docker rmi 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web:stage
   only:
     variables:
@@ -59,7 +59,7 @@ deploy_production:
   script:
     - docker build -t prodex/web:prod -f ./dockerfiles/Dockerfile.prod .
     - docker tag prodex/web:test 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web:production
-    - docker push 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web
+    - docker push 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web:production
     - docker rmi 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web:production
   only:
     variables:
