--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ before_script:
 test:
   script:
     - cd ..
-    - docker run -v $PWD:/test -w /test -u appuser cypress/artio
+    - docker run -v $PWD:/test -w /test -u appuser cypress/artio --headless --browser chrome
   artifacts:
     when: always
     paths:
