--- a/package.json
+++ b/package.json
@@ -112,7 +112,7 @@
     "babel-plugin-styled-components": "^1.10.0",
     "check-prop-types": "^1.1.2",
     "enzyme": "^3.11.0",
-    "cypress": "6.4.0",
+    "cypress": "^7.4.0",
     "cypress-file-upload": "^3.3.4",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
