--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^5.0.0",
     "redux-promise-middleware-actions": "^2.1.0",
+    "redux-saga": "^1.0.2",
     "redux-thunk": "^2.3.0",
     "request": "^2.88.0",
     "reselect": "^4.0.0",
