--- a/dockerfiles/Dockerfile.review
+++ b/dockerfiles/Dockerfile.review
@@ -49,7 +49,7 @@ COPY . .
 
 #ENV REACT_APP_API_URL=https://test.echoexchange.net/
 ENV NODE_ENV=production
-ENV APP_ENV=review
+ENV BABEL_ENV=review
 
 # Building app
 RUN npm run build
