--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,7 @@ deploy_dev:
   stage: deploy
   resource_group: dev
   script:
-    - docker build -t prodex/web:test -f ./dockerfiles/Dockerfile.review .
+    - docker build -t prodex/web:test -f ./dockerfiles/Dockerfile.dev .
     - docker tag prodex/web:test 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web:dev
     - docker push 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web:dev
     - docker rmi 097989233947.dkr.ecr.us-east-1.amazonaws.com/prodex/web:dev
