--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "enzyme": "^3.11.0",
     "cypress": "^7.4.0",
     "cypress-file-upload": "^3.3.4",
+    "cypress-mailosaur": "^2.3.3",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-cypress": "^2.11.3",
