--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,8 @@
 before_script:
-  - docker -D info
-  - docker system prune -f
-  - docker system prune --volumes -f
-  - docker rmi --force $(docker images -q --no-trunc) || true
+  #- docker -D info
+  #- docker system prune -f
+  #- docker system prune --volumes -f
+  #- docker rmi --force $(docker images -q --no-trunc) || true
   - cd cypress/
   - set e+x
   - docker build -t cypress/artio .
