npm install mailosaur only

--- a/cypress/Dockerfile
+++ b/cypress/Dockerfile
@@ -1,8 +1,7 @@
 
 FROM cypress/included:7.4.0
 
-COPY /package.json /package.json
-RUN npm install
+RUN npm install cypress-mailosaur
 # "root"
 RUN whoami
 # uid=0(root) gid=0(root) groups=0(root)
