--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@devexpress/dx-react-core": "^1.11.0",
     "@devexpress/dx-react-grid": "^1.11.0",
     "@devexpress/dx-react-grid-bootstrap4": "^1.11.0",
+    "@fingerprintjs/fingerprintjs": "^3.3.0",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^3.0.2",
     "@next/bundle-analyzer": "^10.2.0",
