--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-dom": "^17.0.1",
     "react-dropzone": "^5.1.1",
     "react-feather": "^2.0.9",
+    "react-gtm-module": "^2.0.11",
     "react-html-parser": "^2.0.2",
     "react-input-mask": "^3.0.0-alpha.2",
     "react-intl": "^5.12.0",
